--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -16,10 +16,16 @@ jobs:
       - name: Environment Printer
         uses: managedkaos/print-env@v1.0
 
-      - uses: docker/build-push-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          file: build/package/Dockerfile
           repository: strider2038/otus-micro-1
           always_pull: true
           build_args: APP_VERSION=${{ env.APP_VERSION }}
